# ansy

./: README.md  pyproject.toml
ansy/: __main__.py  cli.py
ansy/app/: align.py  annotate.py  annote.py  sync.py
testData/subject1/: annotate.txt  config.json  loc1.csv  loc2.csv  loc3.csv  sync_result.txt
testData/subject1/aligned/: loc1.csv  loc2.csv  loc3.csv
tests/: test_load_json.py
