[tool.poetry]
name = "ansy"
version = "0.1.0"
description = "ansy is a tool for ANnnotating and SYnchronizing wearable sensor data"
authors = ["Ben Zhang <ben.bq.zhang@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.1.0"
pandas = "^1.3.5"
typer = {extras = ["all"], version = "^0.4.1"}

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[tool.poetry.scripts]
ansy = "ansy.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
